--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
     </div>
 </section>
     <section id="formulario">
-        <div >
-            <div>
+        <div>
             <h2>Expo-Cézanne</h2>
             <p>Ingrese su mail y país de destino; le enviaremos información por correo.</p>
             <form action="index.html">
                 <input type="email" id="email" name="email" required placeholder="Anonymus@mail.com">
-                <select name="" id="">
+                <select name="Pais">
                     <option value="alemania">Alemania</option>
                     <option value="argentina">Argentina</option>
                     <option value="brasil">Brasil</option>
@@ -57,7 +56,6 @@
         </div>
     </section>
     
-
 <section id="Grid">
     <article>
         <h1>Expo P.Cézanne</h1>
